--- a/templates/images.html
+++ b/templates/images.html
@@ -4,37 +4,37 @@
 
 {% block body %}
 
-<h1>Article Detail</h1>
+<h1>cell Detail</h1>
 
 
-<p>PK: {{ article.pk }}</p>
-<p>제목: {{ article.title }}</p>
-<p>내용: {{ article.content }}</p>
-{% if article.image %}
+<p>PK: {{ cell.pk }}</p>
+<p>제목: {{ cell.title }}</p>
+<p>내용: {{ cell.content }}</p>
+{% if cell.image %}
     <p>
-        이미지: <img src ="{{ article.image.url }}" alt = "{{ article.image}}"> 
+        이미지: <img src ="{{ cell.image.url }}" alt = "{{ cell.image}}">
     </p>>
 {% endif %}
-<p>생성 시각: {{ article.created_at }}</p>
-<p>수정 시각: {{ article.updated_at }}</p>
+<p>생성 시각: {{ cell.created_at }}</p>
+<p>수정 시각: {{ cell.updated_at }}</p>
 
-<a href="{% url 'articles:index' %}">Index</a>
-<a href="{% url 'articles:edit' article.pk %}">Edit</a>
+<a href="{% url 'cells:index' %}">Index</a>
+<a href="{% url 'cells:edit' cell.pk %}">Edit</a>
 
-<form action="{% url 'articles:delete' article.pk %}" method="POST">
+<form action="{% url 'cells:delete' cell.pk %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Delete">
 </form>
 
 <!-- 댓글 목록 -->
-<h3>댓글 목록 ({{ article.comment_set.all.count }})</h3>
+<h3>댓글 목록 ({{ cell.comment_set.all.count }})</h3>
 <!-- |length , .count -->
 <ul>
-    {% for comment in article.comment_set.all %}
+    {% for comment in cell.comment_set.all %}
     <li>
         {{ comment.content }} - {{ comment.created_at }}
-        <a href="{% url 'articles:comments_edit' article.pk comment.pk %}">Edit</a>
-        <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
+        <a href="{% url 'cells:comments_edit' cell.pk comment.pk %}">Edit</a>
+        <form action="{% url 'cells:comments_delete' cell.pk comment.pk %}" method="POST">
             {% csrf_token %}
             <input type="submit" value="Delete">
         </form>
@@ -48,7 +48,7 @@
 
 <!-- 댓글 입력창 -->
 <h3>댓글 입력</h3>
-<form action="{% url 'articles:comments_new' article.pk %}" method="POST">
+<form action="{% url 'cells:comments_new' cell.pk %}" method="POST">
     {% csrf_token %}
     {{ comment_form }}
     <input type="submit">
