--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,25 @@
 {% extends 'base.html' %}
+{% block content %}
 
-{% load static %}
-
-{% block body %}
-
-<h1>Article Index</h1>
-
-<a href="{% url 'cells:new' %}">New</a>
-
-<ul>
-    {% for cell in cells %}
-        <li>
-            <a href="{% url 'cells:detail' cell.pk %}">{{ cell.title }}</a>
-        </li>
-    {% endfor %}
-</ul>
-
-<img src ="{% static 'main.png' %}" alt="보노보노">
+<br>
+<div class="container">
+	<form action="{% url 'cell:image_upload' %}" enctype="multipart/form-data" method="POST">
+	  {% csrf_token %}
+	  <h4>제목: </h4>
+	  <input type="text" name="title">
+	  <br>
+	  <br>
+	  <h4>본문: </h4>
+	  <textarea cols=40 rows=10 name="body"></textarea>
+	  <br>
+	  <br>
+	  <h4>사진: </h4>
+	  <input type="file" name="images" accept="image/*">
+	  <br>
+	  <br>
+	  <input class="btn btn-dark" type="submit" value="글쓰기">
+  </form>
+</div>
 
 {% endblock %}
+
