--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,16 +4,21 @@
         <div class="card">
           <div class="card-body">
             <h1>{{ cell.title }}</h1>
-            <p>{{ cell.pub_date }}</p>
-            <p>{{ cell.body }}</p>
+{#            <p>{{ cell.pub_date }}</p>#}
+{#            <p>{{ cell.body }}</p>#}
             <br>
             {% if cell.images %}
                 <img src="{{ cell.images.url }}" width="500" height="500">
             {% endif %}
-            <br>
-            <br>
-            <a href="{% url 'update' blog.id %}"><img src="/static/update.png" alt="수정" width="30"></a>
-            <a href="{% url 'delete' blog.id %}"><img src="/static/delete.png" alt="삭제" width="30"></a>
+            {% if cell.images %}
+{#            {% if cell.predicted_images %}#}
+                <img src="{{ cell.images.url }}" width="500" height="500">
+{#                <img src="{{ cell.predicted_images.url }}" width="500" height="500">#}
+            {% endif %}
+{#            <br>#}
+{#            <br>#}
+{#            <a href="{% url 'cell:update' blog.id %}"><img src="/static/update.png" alt="수정" width="30"></a>#}
+{#            <a href="{% url 'cell:delete' blog.id %}"><img src="/static/delete.png" alt="삭제" width="30"></a>#}
           </div>
         </div>
       </div>
