--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,17 @@
 	  {% csrf_token %}
 	  <h4>제목: </h4>
 	  <input type="text" name="title">
-	  <br>
-	  <br>
-	  <h4>본문: </h4>
-	  <textarea cols=40 rows=10 name="body"></textarea>
+{#	  <br>#}
+{#	  <br>#}
+{#	  <h4>본문: </h4>#}
+{#	  <textarea cols=40 rows=10 name="body"></textarea>#}
 	  <br>
 	  <br>
 	  <h4>사진: </h4>
 	  <input type="file" name="images" accept="image/*">
 	  <br>
 	  <br>
-	  <input class="btn btn-dark" type="submit" value="글쓰기">
+	  <input class="btn btn-dark" type="submit" value="upload">
   </form>
 </div>
 
