--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <br>
 <div class="container">
-	<form action="{% url 'cell:image_upload' %}" enctype="multipart/form-data" method="POST">
+	<form action="{% url 'image_upload' %}" enctype="multipart/form-data" method="POST">
 	  {% csrf_token %}
 	  <h4>제목: </h4>
 	  <input type="text" name="title">
