--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,8 +13,7 @@
             {% endif %}
             {% if cell.images %}
 {#            {% if cell.predicted_images %}#}
-                <img src="{{ cell.images.url }}" width="500" height="500">
-{#                <img src="{{ cell.predicted_images.url }}" width="500" height="500">#}
+                <img src="{{ cell.predicted_images.url }}" width="500" height="500">
             {% endif %}
 {#            <br>#}
 {#            <br>#}
