--- a/templates/detail.html
+++ b/templates/detail.html
@@ -11,9 +11,8 @@
             {% if cell.images %}
                 <img src="{{ cell.images.url }}" width="500" height="500">
             {% endif %}
-            {% if cell.predicted_images %}
-{#            {% if cell.predicted_images %}#}
-                <img src="{{ cell.predicted_images.url }}" width="500" height="500">
+            {% if cell.images %}
+            <img src="{{ cell.predicted_images }}" width="500" height="500">
             {% endif %}
 {#            <br>#}
 {#            <br>#}
