안되면 집가자..

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,7 +4,7 @@
         <div class="card">
           <div class="card-body">
             <h1>{{ cell.title }}</h1>
-            {{ type_test.as_p }}
+{#            {{ type_test.as_p }}#}
 {#            <p>{{ cell.pub_date }}</p>#}
 {#            <p>{{ cell.body }}</p>#}
             <br>
