--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,7 +13,8 @@
             {% endif %}
             {% if cell.images %}
             <img src="{{ cell.predicted_images }}" width="500" height="500">
-            {% endif %}
+            {% endif %}>
+          <p>{{ cell_result.hela }}</p>
 
 {#            <br>#}
 {#            <br>#}
