--- a/templates/detail.html
+++ b/templates/detail.html
@@ -14,7 +14,11 @@
             {% if cell.images %}
             <img src="{{ cell.predicted_images }}" width="500" height="500">
             {% endif %}>
+
           <p>{{ cell_result.hela }}</p>
+          <p>{{ cell_result.huh-7 }}</p>
+          <p>{{ cell_result.MCF-7 }}</p>
+          <p>{{ cell_result.NCI }}</p>
 
 {#            <br>#}
 {#            <br>#}
