--- a/templates/detail.html
+++ b/templates/detail.html
@@ -16,8 +16,8 @@
             {% endif %}>
 
           <p>{{ cell_result.hela }}</p>
-          <p>{{ cell_result.huh-7 }}</p>
-          <p>{{ cell_result.MCF-7 }}</p>
+          <p>{{ cell_result.huh }}</p>
+          <p>{{ cell_result.MCF }}</p>
           <p>{{ cell_result.NCI }}</p>
 
 {#            <br>#}
