--- a/templates/detail.html
+++ b/templates/detail.html
@@ -15,10 +15,14 @@
             <img src="{{ cell.predicted_images }}" width="500" height="500">
             {% endif %}>
 
-          <p>{{ cell_result.hela }}</p>
-          <p>{{ cell_result.huh }}</p>
-          <p>{{ cell_result.MCF }}</p>
-          <p>{{ cell_result.NCI }}</p>
+          <h3>hela</h3>
+          <h3>{{ cell_result.hela }}</h3>
+          <h3>huh</h3>
+          <h3>{{ cell_result.huh }}</h3>
+          <h3>MCF</h3>
+          <h3>{{ cell_result.MCF }}</h3>
+          <h3>NCI</h3>
+          <h3>{{ cell_result.NCI }}</h3>
 
 {#            <br>#}
 {#            <br>#}
