--- a/templates/detail.html
+++ b/templates/detail.html
@@ -15,15 +15,7 @@
             <img src="{{ cell.predicted_images }}" width="500" height="500">
             {% endif %}>
 
-          <h3>hela</h3>
-          <h3>{{ cell_result.hela }}</h3>
-          <h3>huh</h3>
-          <h3>{{ cell_result.huh }}</h3>
-          <h3>MCF</h3>
-          <h3>{{ cell_result.MCF }}</h3>
-          <h3>NCI</h3>
-          <h3>{{ cell_result.NCI }}</h3>
-
+          <h3>{{ cell_result }}</h3>
 {#            <br>#}
 {#            <br>#}
 {#            <a href="{% url 'cell:update' blog.id %}"><img src="/static/update.png" alt="수정" width="30"></a>#}
