--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,9 @@
 	  <br>
 	  <br>
 	  <input class="btn btn-dark" type="submit" value="upload">
+          <br>
+	  <input type="radio" name="check_class" value="4class" checked="checked">4class
+          <input type="radio" name="check_class" value="2class">2class
   </form>
 </div>
 
